--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,17 @@
-# Compiled class file
-*.class
+.idea
+.gradle
+.kotlin
 
-# Log file
-*.log
+build
+out
 
-# BlueJ files
-*.ctxt
+!**/src/main/**/build/
+!**/src/test/**/build/
+!**/src/main/**/out/
+!**/src/test/**/out/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+*.iws
+*.iml
+*.ipr
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
-
-# Kotlin Gradle plugin data, see https://kotlinlang.org/docs/whatsnew20.html#new-directory-for-kotlin-data-in-gradle-projects
-.kotlin/
+.DS_Store
